--- a/src/css/reset.scss
+++ b/src/css/reset.scss
@@ -36,6 +36,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+    margin: 0;
 }
 
 ol, ul {
@@ -355,11 +356,4 @@ fieldset {
 
 textarea {
     resize: vertical;
-}
-
-.chromeframe {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
 }
