--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -1,11 +1,16 @@
 :root {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	--font-mono: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-mono: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
 }
 
 h1 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
+
 h2 {
-    font-size: 3rem;
+  font-size: 3rem;
+}
+
+.leaflet-top {
+  top: 80px !important;
 }
