Jank mobile go brr

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -29,6 +29,14 @@ h2 {
   }
 }
 
+
+@media only screen and (max-width: 440px) {
+
+  .pip {
+    display: none;
+  }
+
+}
 .notifications * {
   z-index: 999;
 }
