Pip display issues now fixed + post notify to server

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -30,13 +30,13 @@ h2 {
 }
 
 
-@media only screen and (max-width: 440px) {
+// @media only screen and (max-width: 440px) {
 
-  .pip {
-    display: none;
-  }
+//   .pip {
+//     display: none;
+//   }
 
-}
+// }
 .notifications * {
   z-index: 999;
 }
