--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -8,7 +8,12 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
 .leaflet-top {
