--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -1,7 +1,8 @@
-*, :root {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
-		'Segoe UI Emoji', 'Segoe UI Symbol';
-	--font-mono: 'SF Mono', 'Monaco', 'Inconsolata', 'Fira Mono', 'Droid Sans Mono', 'Source Code Pro', monospace;
+*,
+:root {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	--font-mono: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
 }
 
 h1 {
@@ -25,7 +26,6 @@ h3 {
 	cursor: grab;
 }
 
-
 @media all and (max-width: 715px) {
 	.leaflet-top {
 		top: 135px !important;
@@ -48,4 +48,54 @@ h3 {
 
 .leaflet-marker-icon {
 	transition: transform 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.leaflet-container .leaflet-popup-close-button {
+	// Improve contrast for the popup share and close buttons
+	color: #858585 !important;
+}
+.leaflet-popup-share-button {
+	position: absolute;
+	top: 0;
+	left: 10px;
+	padding: 4px 4px 0 0;
+	border: none;
+	text-align: center;
+	width: 18px;
+	background: transparent !important;
+	&::after {
+		content: "";
+
+		position: absolute;
+		z-index: 1000000;
+		display: none;
+		padding: 5px 8px;
+		font: normal normal 11px/1.5 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif,
+			"Segoe UI Emoji", "Segoe UI Symbol";
+		color: #fff;
+		text-align: center;
+		text-decoration: none;
+		text-shadow: none;
+		text-transform: none;
+		letter-spacing: normal;
+		word-wrap: break-word;
+		white-space: pre;
+		pointer-events: none;
+		content: attr(aria-label);
+		background: rgba(0, 0, 0, 0.8);
+		border-radius: 3px;
+		-webkit-font-smoothing: subpixel-antialiased;
+	}
+
+	&::before {
+		content: "";
+		position: absolute;
+		z-index: 1000001;
+		display: none;
+		width: 0;
+		height: 0;
+		color: rgba(0, 0, 0, 0.8);
+		pointer-events: none;
+		content: "";
+		border: 5px solid transparent;
+	}
 }
