--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -53,49 +53,76 @@ h3 {
 	// Improve contrast for the popup share and close buttons
 	color: #858585 !important;
 }
-.leaflet-popup-share-button {
+.leaflet-container a.leaflet-popup-close-button {
+	// Improve contrast for the popup share and close buttons
+	font-size: 1.5rem !important;
+}
+.leaflet-popup-share-button-wrapper {
 	position: absolute;
 	top: 0;
 	left: 10px;
-	padding: 4px 4px 0 0;
-	border: none;
-	text-align: center;
-	width: 18px;
-	background: transparent !important;
-	&::after {
-		content: "";
+	.leaflet-popup-share-button {
+		position: relative;
 
-		position: absolute;
-		z-index: 1000000;
-		display: none;
-		padding: 5px 8px;
-		font: normal normal 11px/1.5 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif,
-			"Segoe UI Emoji", "Segoe UI Symbol";
-		color: #fff;
+		padding: 4px 4px 0 0;
+		border: none;
 		text-align: center;
-		text-decoration: none;
-		text-shadow: none;
-		text-transform: none;
-		letter-spacing: normal;
-		word-wrap: break-word;
-		white-space: pre;
-		pointer-events: none;
-		content: attr(aria-label);
-		background: rgba(0, 0, 0, 0.8);
-		border-radius: 3px;
-		-webkit-font-smoothing: subpixel-antialiased;
-	}
+		width: 18px;
+		background: transparent !important;
+		overflow: visible !important;
+		&::after {
+			content: attr(aria-label); /* here's the magic */
+			position: absolute;
 
-	&::before {
-		content: "";
-		position: absolute;
-		z-index: 1000001;
-		display: none;
-		width: 0;
-		height: 0;
-		color: rgba(0, 0, 0, 0.8);
-		pointer-events: none;
-		content: "";
-		border: 5px solid transparent;
+			/* vertically center */
+			top: 110%;
+			transform: translateX(-50%);
+
+			/* move to right */
+			//   left:100%;
+			margin-left: 10px; /* and add a small left margin */
+
+			/* basic styles */
+			width: 60px;
+			padding: 4px;
+			border-radius: 5px;
+			background: rgb(12, 12, 12);
+			color: #fff;
+			text-align: center;
+			opacity: 0;
+			transition: 0.3s opacity;
+			pointer-events: none;
+		}
+		&:hover::after {
+			opacity: 1;
+		}
+
+		&::before {
+			content: "";
+			position: absolute;
+
+			/* position tooltip correctly */
+			left: 100%;
+			margin-left: -5px;
+
+			/* vertically center */
+			top: 47%;
+			transform: translateX(-50%);
+
+			/* move to right */
+			//   left:100%;
+			// margin-left: 10px; /* and add a small left margin */
+
+			/* the arrow */
+			border: 8px solid rgb(12, 12, 12);
+			border-color: transparent transparent rgb(12, 12, 12) transparent;
+
+			opacity: 0;
+			transition: 0.3s opacity;
+			pointer-events: none;
+		}
+		&:hover::before {
+			opacity: 1;
+		}
 	}
 }
