--- a/src/css/leaflet.scss
+++ b/src/css/leaflet.scss
@@ -105,3 +105,16 @@
 		margin: 0.5rem 0;
 	}
 }
+.exposer-type-bar {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	margin-left: calc(-0.5rem - 1px);
+	border-radius: 0 0 12px 12px;
+	text-align: center;
+	background-color: #333;
+	color: white;
+	text-transform: uppercase;
+	font-size: 0.9rem;
+	padding: 0.2rem 0;
+}
