--- a/src/css/leaflet.scss
+++ b/src/css/leaflet.scss
@@ -104,6 +104,7 @@
 	p {
 		margin: 0.5rem 0;
 	}
+	margin-bottom: 3em;
 }
 .exposer-type-bar {
 	position: absolute;
@@ -117,4 +118,25 @@
 	text-transform: uppercase;
 	font-size: 0.9rem;
 	padding: 0.2rem 0;
+}
+
+div.register-details {
+	text-align: center;
+	border: 2px solid #333;
+	transition: all 200ms ease-in-out;
+	a {
+		background-color: #333;
+		color: white;
+		padding: 0.2rem 0.5rem;
+		margin: 0.5rem;
+		text-transform: uppercase;
+		font-size: 0.9rem;
+		text-decoration: none;
+	}
+	&:hover {
+		border: 2px solid #444;
+		a {
+			background-color: #444;
+		}
+	}
 }
