--- a/src/css/leaflet.scss
+++ b/src/css/leaflet.scss
@@ -120,22 +120,34 @@
 	padding: 0.2rem 0;
 }
 
-div.register-details {
-	text-align: center;
-	border: 2px solid #333;
-	transition: all 200ms ease-in-out;
-	a {
+a.register-details {
+	text-decoration: none;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: auto !important;
+	.register-details-inner {
+		text-align: center;
+		border: 2px solid #333;
+		color: black;
+		transition: all 200ms ease-in-out;
+
+	}
+	.register-details-action {
 		background-color: #333;
 		color: white;
 		padding: 0.2rem 0.5rem;
-		margin: 0.5rem;
 		text-transform: uppercase;
 		font-size: 0.9rem;
-		text-decoration: none;
+		width: fit-content;
+		transition: all 200ms ease-in-out;
+
 	}
 	&:hover {
-		border: 2px solid #444;
-		a {
+		.register-details-inner {
+			border: 2px solid #444;
+		}
+		.register-details-action {
 			background-color: #444;
 		}
 	}
