SCSS refactor, better mobile support, and missing pins count

--- a/src/css/leaflet.scss
+++ b/src/css/leaflet.scss
@@ -1,4 +1,3 @@
-
 .leaflet-top {
 	top: 93px !important;
 }
@@ -8,6 +7,7 @@
 		top: 135px !important;
 	}
 }
+
 @media all and (max-width: 370px) {
 	.leaflet-top {
 		top: 155px !important;
@@ -15,140 +15,172 @@
 }
 
 .leaflet-bottom {
-	// We have added our own atributation at the top
+	// We have added our own attribution at the top
 	display: none;
 }
 
 .leaflet-marker-icon {
 	transition: transform 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-.leaflet-container .leaflet-popup-close-button {
-	// Improve contrast for the popup share and close buttons
-	color: #858585 !important;
-}
-.leaflet-container a.leaflet-popup-close-button {
+
+a.leaflet-popup-close-button {
 	// Improve contrast for the popup share and close buttons
 	font-size: 1.5rem !important;
+	color: #858585 !important;
 }
-.leaflet-popup-share-button-wrapper {
-	position: absolute;
-	top: 0;
-	left: 10px;
-	.leaflet-popup-share-button {
-		position: relative;
 
-		padding: 4px 4px 0 0;
-		border: none;
-		text-align: center;
-		width: 18px;
-		background: transparent !important;
-		overflow: visible !important;
-		&::after {
-			content: attr(aria-label); /* here's the magic */
-			position: absolute;
-
-			/* vertically center */
-			top: 110%;
-			transform: translateX(-50%);
-
-			/* move to right */
-			//   left:100%;
-			margin-left: 10px; /* and add a small left margin */
-
-			/* basic styles */
-			width: 60px;
-			padding: 4px;
-			border-radius: 5px;
-			background: rgb(12, 12, 12);
-			color: #fff;
-			text-align: center;
-			opacity: 0;
-			transition: 0.3s opacity;
-			pointer-events: none;
-		}
-		&:hover::after {
-			opacity: 1;
-		}
-
-		&::before {
-			content: "";
-			position: absolute;
-
-			/* position tooltip correctly */
-			left: 100%;
-			margin-left: -5px;
-
-			/* vertically center */
-			top: 47%;
-			transform: translateX(-50%);
-
-			/* move to right */
-			//   left:100%;
-			// margin-left: 10px; /* and add a small left margin */
-
-			/* the arrow */
-			border: 8px solid rgb(12, 12, 12);
-			border-color: transparent transparent rgb(12, 12, 12) transparent;
-
-			opacity: 0;
-			transition: 0.3s opacity;
-			pointer-events: none;
-		}
-		&:hover::before {
-			opacity: 1;
-		}
-	}
-}
 .leaflet-popup-content-wrapper .leaflet-popup-content {
 	margin: 0 0.5rem;
-	p {
+
+	// TITLE
+
+	h3 {
 		margin: 0.5rem 0;
-	}
-	margin-bottom: 3em;
-}
-.exposer-type-bar {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	margin-left: calc(-0.5rem - 1px);
-	border-radius: 0 0 12px 12px;
-	text-align: center;
-	background-color: #333;
-	color: white;
-	text-transform: uppercase;
-	font-size: 0.9rem;
-	padding: 0.2rem 0;
-}
-
-a.register-details {
-	text-decoration: none;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: auto !important;
-	.register-details-inner {
+		font-size: 1rem;
+		width: 80%;
 		text-align: center;
-		border: 2px solid #333;
-		color: black;
-		transition: all 200ms ease-in-out;
+		margin: 0 auto;
+		@media all and (max-width: 715px) {
+			& {
+				font-size: 0.85rem;
+				line-height: 1rem;
+				width: 90%;
 
+			}
+		}
 	}
-	.register-details-action {
+
+	// EXPOSER TYPE BAR
+
+	.exposer-type-bar {
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		margin-left: calc(-0.5rem - 1px);
+		border-radius: 0 0 12px 12px;
+		text-align: center;
 		background-color: #333;
 		color: white;
-		padding: 0.2rem 0.5rem;
 		text-transform: uppercase;
 		font-size: 0.9rem;
-		width: fit-content;
-		transition: all 200ms ease-in-out;
-
+		padding: 0.2rem 0;
+		@media all and (max-width: 715px) {
+			& {
+				font-size: 0.75rem;
+				padding: 0.1rem 0;
+				border-width: 3px !important;
+			}
+		}
 	}
-	&:hover {
+	margin-bottom: 3em; // Gives Room
+	@media all and (max-width: 715px) {
+		& {
+			margin-bottom: 1em;
+		}
+	}
+
+	// REGISTER DETAILS
+
+	a.register-details {
+		text-decoration: none;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: auto !important;
 		.register-details-inner {
-			border: 2px solid #444;
+			text-align: center;
+			border: 2px solid #333;
+			color: black;
+			transition: all 200ms ease-in-out;
 		}
 		.register-details-action {
-			background-color: #444;
+			background-color: #333;
+			color: white;
+			padding: 0.2rem 0.5rem;
+			text-transform: uppercase;
+			font-size: 0.9rem;
+			width: fit-content;
+			transition: all 200ms ease-in-out;
+		}
+		&:hover {
+			.register-details-inner {
+				border: 2px solid #444;
+			}
+			.register-details-action {
+				background-color: #444;
+			}
+		}
+	}
+
+	// SHARE BUTTON AND LABEL
+
+	.leaflet-popup-share-button-wrapper {
+		position: absolute;
+		top: 0;
+		left: 10px;
+		.leaflet-popup-share-button {
+			position: relative;
+
+			padding: 4px 4px 0 0;
+			border: none;
+			text-align: center;
+			width: 18px;
+			background: transparent !important;
+			overflow: visible !important;
+			&::after {
+				content: attr(aria-label); /* here's the magic */
+				position: absolute;
+
+				/* vertically center */
+				top: 110%;
+				transform: translateX(-50%);
+
+				/* move to right */
+				//   left:100%;
+				margin-left: 10px; /* and add a small left margin */
+
+				/* basic styles */
+				width: 60px;
+				padding: 4px;
+				border-radius: 5px;
+				background: rgb(12, 12, 12);
+				color: #fff;
+				text-align: center;
+				opacity: 0;
+				transition: 0.3s opacity;
+				pointer-events: none;
+			}
+			&:hover::after {
+				opacity: 1;
+			}
+
+			&::before {
+				content: "";
+				position: absolute;
+
+				/* position tooltip correctly */
+				left: 100%;
+				margin-left: -5px;
+
+				/* vertically center */
+				top: 47%;
+				transform: translateX(-50%);
+
+				/* move to right */
+				//   left:100%;
+				// margin-left: 10px; /* and add a small left margin */
+
+				/* the arrow */
+				border: 8px solid rgb(12, 12, 12);
+				border-color: transparent transparent rgb(12, 12, 12) transparent;
+
+				opacity: 0;
+				transition: 0.3s opacity;
+				pointer-events: none;
+			}
+			&:hover::before {
+				opacity: 1;
+			}
 		}
 	}
 }
